# syncplan

./: .gitignore  CMakeLists.txt  README.md
include/: PMatching.h  PQPlanarity.h  PQPlanarityComponents.h  QPartitioning.h
include/utils/: Bijection.h  Iterators.h  Levels.h  Macros.h  NodeSPQRRotation.h  NodeTricRotation.h  OverlappingGraphCopies.h  RegisteredMultiArray.h
install/: Dockerfile  requirements.txt  setup.sh  slurm-install.sh
src/: PMatching.cpp  PQPlanarityAttributes.cpp  PQPlanarityComponents.cpp  PQPlanarityConSEFE.cpp  PQPlanarityConsistency.cpp  QPartitioning.cpp
src/exec/: cplan.cpp  pqplan.cpp  profile-cplan.cpp  return.h
src/operation/: Propagate.cpp  SPQRBatch.cpp  Simplify.cpp  SimplifyUtils.cpp  Wheel.cpp
src/solve/: BlockEmbedding.cpp  Embedder.cpp  MakeReduced.cpp  Solver.cpp
src/utils/: Levels.cpp  NodeSPQRRotation.cpp  NodeTricRotation.cpp
tools/: evaluation.py  make-instances.sh  make-lvl-instances.py  make-pq-instances.sh  make-sefe-instances.sh  opstats.py  profile-old.sh  profile-variants.sh  sprun-check.sh  sprun.sh  sprun_job.sh  utils.py
tools/plot/: common.py  common_db.py  common_utils.py  ds_stats.py  fit.py  opstats_constants.py  plot-all.sh  plot.py  plot_binom_test.py  plot_dsold.py  plot_meds.py  plot_opstats.py  plot_rt.py  plot_timeout.py
